# decompstat

./: .gitignore  CHANGELOG.md  CITATION.cff  LICENSE  README.md  SPEC.md  pyproject.toml
.github/workflows/: tests.yml
decompstat/: __init__.py  cli.py  compare.py  core.py  excel.py  io.py  ranking.py  report.py  schema.py  score.py  uncertainty.py  validate.py
examples/insulin_b16_manual/: b16_manual_test.csv  metadata.yaml  score_summary.csv
examples/insulin_mutation_scores/: insulin_mutation_scores.csv  metadata.yaml  score_summary.csv  score_summary_min11.csv
examples/scripts/: convert_insulin_excel.py
examples/synthetic_ar1/: energies.csv  generate_example.py  metadata.yaml
tests/: test_compare.py  test_excel.py  test_ranking.py  test_schema.py  test_score.py  test_uncertainty.py
